unpackaged/main/default/objects/Managed_Services_Assets__c/Managed_Services_Assets__c.object-meta.xml
<CustomObject>
    <label>Managed Services Assets</label>
    <nameField>
        <displayFormat>MSA-{00000000}</displayFormat>
        <label>Managed Services Assets Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Managed Services Assets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>