unpackaged/main/default/objects/Managed_Services_Assets__c/fields/Asset_Description__c.field-meta.xml
<CustomField>
    <fullName>Asset_Description__c</fullName>
    <label>Asset Description</label>
    <length>120</length>
    <type>Text</type>
</CustomField>