unpackaged/main/default/objects/Managed_Services_Assets__c/fields/MAC_Serial__c.field-meta.xml
<CustomField>
    <fullName>MAC_Serial__c</fullName>
    <label>MAC/Serial</label>
    <length>32</length>
    <type>Text</type>
</CustomField>